OS2DISP-113: Fixed z-index for delete button

--- a/Resources/sass/modules/_overview.scss
+++ b/Resources/sass/modules/_overview.scss
@@ -410,7 +410,7 @@
     width: 20px;
     height: 20px;
 
-    z-index: 1;
+    z-index: 5;
   }
 
   &--channel-overlay {
